--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -217,7 +217,7 @@
     <string name="repo_download_failed_http">Downloading %1$s failed: %2$d (%3$s)</string>
     <string name="repo_download_failed">Downloading %1$s failed: %2$s</string>
     <string name="repo_load_failed">Cannot load repository from %1$s:\n%2$s</string>
-
+    <string name="choose_color">Choose a color…</string>
 
     <string name="warning_installed_on_external_storage">This module cannot be loaded because it\'s installed on the SD card, please move it to internal storage.</string>
     <string name="warning_forward_locked">This module cannot be loaded because it\'s is forward-locked, please contact the module\'s developer.</string>
@@ -231,8 +231,6 @@
     <string name="export_installed_modules">Export installed modules list</string>
     <string name="import_installed_modules">Import installed modules list</string>
     <string name="no_installed_modules">There isn\'t any installed module!</string>
-
-
     <string name="no_backup_found">No backup found</string>
     <string name="no_enabled_modules">There is any modules enabled</string>
 
@@ -260,7 +258,16 @@
     <string name="xposedZipNotFound">Zip not found, probably a new version released.</string>
     <string name="warningArchitecture">HAVE YOU CHOSEN RIGHT XPOSED ZIP ARCHITECTURE?\nWrong zip can damage your phone!</string>
     <string name="help">Help</string>
+    <string name="helpChoose">
+        How to choose correct zip file?\n
 
+        xposed-v*-sdk%%SDK%%-%%ARCH%%\n\n
+
+        Where:\n
+        %%SDK%% is your Android SDK version\n\n
+        %%ARCH%% is your device CPU architecture
+    </string>
+    <string name="newVersion">New version of Xposed Installer is available! Update it!</string>
     <string name="update">Update</string>
 
     <string name="installationForbidden">Installation is not possible on this device. To install Xposed through this app, the device must run Android Lollipop or higher.</string>
@@ -334,5 +341,7 @@
     <string name="restart_needed">Restart needed</string>
     <string name="cache_cleaned">App\'s cache has been cleaned. Restart is needed</string>
     <string name="update_download_list">Pulldown to refresh download\'s module list</string>
+    <string name="download_location">Download location</string>
+    <string name="download_location_summ">Download location for APK files (modules only)</string>
 
 </resources>
